--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
   <canvas id="cursor-trail"></canvas>
   <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
-  <script src="/cursor.js"></script>
+  <script defer src="/cursor.js"></script>
 </body>
 </html>
